Archive2/3c/fbcb0ebd78e13d/output
main.cpp:5:11: error: expected expression
    void(*){} do not try this float; // simple C++ keywords are allowed, of course
          ^
main.cpp:7:10: error: expected expression
    int(&){"Allowed characters"}
         ^
main.cpp:8:35: error: '$' in identifier [-Werror,-Wdollar-in-identifier-extension]
    - + * / % & | ^ ~ = . , : ! ? $ ( ) [ ] < > ; // ';' itself is not allowed
                                  ^
main.cpp:10:46: error: expected expression
    char(************************************)
                                             ^
main.cpp:18:46: error: expected expression
    float(*&*&*&*&*&*&*&*&*&*&*&*&*&*&*&*&*&*)
                                             ^
main.cpp:26:34: error: expected expression
    unsigned(*(*(*(*(*(*(*(*(*(*())))))))))){}
                                 ^
6 errors generated.
